<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL" Id="{9d829feb-50db-4587-bef7-e7e48dffe79b}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	g_unCleanroomConnect : UN_CleanroomConnect;
	
	g_bLedFlashSlow : BOOL;
	g_bLedFlashFast : BOOL;
	
	g_sUser : STRING;
	g_sSerialNumber : STRING;
	g_sNotesEntry : T_MAXSTRING;
	
	//Hmi linked variable
	g_sToHmiTopContent : STRING;
	g_sToHmiMiddleContent : STRING;
	g_sToHmiMiddleTab : STRING;
	g_sToHmiBottomContent : STRING;
	
	//Structs with screens that can be appointed to linked variables
	g_stHmiTopBar : ST_HmiTopBar;
	g_stHmiMiddle : ST_HmiMiddle;
	g_stHmiBottomBar : ST_HmiBottomBar;
	
	g_osrNotify : R_TRIG;
END_VAR

VAR_GLOBAL CONSTANT
	g_nMAX_LEN_FEEDBACK : USINT := 8; //Used in CM's
	g_nMAX_LEN_STEP_NAME : USINT := 32;
	g_nMAX_LEN_MESSAGE : USINT := 64;
	g_nMAX_LEN_REASON : USINT := 64;
	g_nLEN_INTERLOCK_LIST : USINT := 6;
	
	g_bFUMO3_Enabled : BOOL := FALSE;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>