<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_MOVITRAC_B_HMI" Id="{0e419767-cf6c-4c38-92d0-c8f39935a231}">
    <Declaration><![CDATA[TYPE ST_MOVITRAC_B_HMI :
STRUCT
	//To hmi
	sState : STRING;

	sDescription : STRING;
	sNameFwd : STRING;
	sNameBck : STRING;
		
	sNameReleaseBrake : STRING;
	sNameApplyBrake : STRING;
	sNameJogFwd : STRING;
	sNameJogBck : STRING;
	sNameStop : STRING;
	sNameReset : STRING;
	
	bStaBrakeReleased : BOOL;
	bStaMotorStopped : BOOL;
	bStaMotorRunningFwd : BOOL;
	bStaMotorRunningBck : BOOL;
	bStaDriveError : BOOL;
	
	bBtnReleaseBrakeEnabled : BOOL;
	bBtnApplyBrakeEnabled : BOOL;
	bBtnJogFwdEnabled : BOOL;
	bBtnJogBckEnabled : BOOL;
	bBtnStopEnabled : BOOL;
	bBtnResetEnabled : BOOL;
	
	s_sInterlockedReasonFwd : STRING;
	s_sInterlockedReasonBwd : STRING;
	
	//From hmi
	bCmdReleaseBrakePressed : BOOL;
	bCmdApplyBrakePressed : BOOL;
	bCmdJogFwdPressed : BOOL;
	bCmdJogBckPressed : BOOL;
	bCmdStopPressed : BOOL;
	bCmdResetPressed : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>