<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_SettingsMoviTrac_B_WithBrake" Id="{6291e12a-7307-46f5-9c2c-c831b1388a03}">
    <Declaration><![CDATA[TYPE ST_SettingsMoviTrac_B_WithBrake :
STRUCT
	tMotorStoppedDelay : TIME := T#3S; //Time delay before applying brake after motor stopped [default: 3s]
	tBrakeReleasedDelay : TIME := T#600MS; //Time delay before starting motor after brake released [default: 600ms]
	tResetPulseDuration : TIME := T#1S; //Reset pulse duration for resetting SEW-drive via IO [default: 1s]
	
	rMaxTargetSpeed : LREAL := 200.0; //Maximum target speed [default: 200.0 mm/s]
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>